@@ -4,7 +4,7 @@
  * %%
  * Copyright (C) 2014 - 2016 The Queen's University of Belfast, Northern Ireland
  * Contact: IP Management (ipmanagement@qub.ac.uk)
- * Copyright (C) 2018 - 2024 QuPath developers, The University of Edinburgh
+ * Copyright (C) 2018 - 2025 QuPath developers, The University of Edinburgh
  * %%
  * QuPath is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -74,8 +74,6 @@ import qupath.lib.roi.interfaces.ROI;
  */
 class PathObjectTileCache implements PathObjectHierarchyListener {
 	
-	public static int DEFAULT_TILE_SIZE = 1024;
-	
 	private static final Logger logger = LoggerFactory.getLogger(PathObjectTileCache.class);
 	
 	/**
@@ -86,26 +84,20 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 	/**
 	 * Keep a map of envelopes per ROI; ROIs should be immutable.
 	 */
-	private Map<ROI, Envelope> envelopeMap = new WeakHashMap<>();
-	
-	/**
-	 * Keep a map of envelopes per object, because potentially an object might have its ROI replaced behind our back...
-	 */
-	private Map<PathObject, Envelope> lastEnvelopeMap = new WeakHashMap<>();
+	private final Map<ROI, Envelope> envelopeMap = new WeakHashMap<>();
 	
 	/**
 	 * Store a spatial index according to the class of PathObject.
 	 */
-	private Map<Class<? extends PathObject>, SpatialIndex> map = new HashMap<>();
+	private final Map<Class<? extends PathObject>, SpatialIndex> map = new HashMap<>();
 	
 	/**
 	 * Map to cache Geometries, specifically for annotations.
 	 */
 	private static final Map<ROI, Geometry> geometryMap = Collections.synchronizedMap(new WeakHashMap<>());
 	private static final Map<ROI, PointOnGeometryLocator> locatorMap = Collections.synchronizedMap(new WeakHashMap<>());
-//	private static final Map<ROI, Coordinate> centroidMap = Collections.synchronizedMap(new WeakHashMap<>());
 
-	private PathObjectHierarchy hierarchy;
+	private final PathObjectHierarchy hierarchy;
 	private boolean isActive = false;
 	
 	private final ReentrantReadWriteLock rwl = new ReentrantReadWriteLock();
@@ -161,6 +153,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 	 * 
 	 * @param pathObject
 	 * @param includeChildren
+	 * @param limitToClass
 	 */
 	private void addToCache(PathObject pathObject, boolean includeChildren, Class<? extends PathObject> limitToClass) {
 		// If the cache isn't active, we can ignore this... it will be constructed when it is needed
@@ -170,12 +163,8 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		if (pathObject.hasROI()) {
 			Class<? extends PathObject> cls = pathObject.getClass();
 			if (limitToClass == null || cls == limitToClass) {
-				SpatialIndex mapObjects = map.get(cls);
-				if (mapObjects == null) {
-					mapObjects = createSpatialIndex();
-					map.put(cls, mapObjects);
-				}
-				Envelope envelope = getEnvelope(pathObject);
+                SpatialIndex mapObjects = map.computeIfAbsent(cls, k -> createSpatialIndex());
+                Envelope envelope = getEnvelope(pathObject);
 				mapObjects.insert(envelope, pathObject);
 			}
 		}
@@ -200,7 +189,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		Geometry geometry = geometryMap.get(roi);
 		if (geometry == null) {
 			geometry = roi.getGeometry();
-			if (pathObject.isAnnotation() || pathObject.isTMACore()) {
+			if (pathObject.isAnnotation() || pathObject.isTMACore() || geometry.getNumPoints() > 100) {
 				geometryMap.put(roi, geometry);
 			}
 		}
@@ -213,7 +202,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		return new Coordinate(roi.getCentroidX(), roi.getCentroidY());
 	}
 	
-	PointOnGeometryLocator getLocator(ROI roi, boolean addToCache) {
+	PointOnGeometryLocator getLocator(ROI roi) {
 		var locator = locatorMap.get(roi);
 		if (locator == null) {
 			var geometry = getGeometry(roi);
@@ -228,7 +217,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		return locator;
 	}
 	
-	private Map<Geometry, PreparedGeometry> preparedGeometryMap = new WeakHashMap<>();
+	private final Map<Geometry, PreparedGeometry> preparedGeometryMap = new WeakHashMap<>();
 	
 	PreparedGeometry getPreparedGeometry(Geometry geometry) {
 		var prepared = preparedGeometryMap.get(geometry);
@@ -249,7 +238,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		var child = getGeometry(possibleChild);
 		// If we have an annotation, do a quick check for a single coordinate outside
 		if (possibleParent.isAnnotation()) {
-			if (getLocator(possibleParent.getROI(), true).locate(child.getCoordinate()) == Location.EXTERIOR)
+			if (getLocator(possibleParent.getROI()).locate(child.getCoordinate()) == Location.EXTERIOR)
 				return false;
 		}
 		var parent = getGeometry(possibleParent);
@@ -266,25 +255,19 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 	
 	boolean containsCentroid(PathObject possibleParent, PathObject possibleChild) {
 		Coordinate centroid = getCentroidCoordinate(possibleChild);
-		if (centroid == null)
-			return false;
 		if (possibleParent.isDetection())
 			return SimplePointInAreaLocator.locate(
 					centroid, getGeometry(possibleParent)) != Location.EXTERIOR;
-		return getLocator(possibleParent.getROI(), true).locate(centroid) != Location.EXTERIOR;
+		return getLocator(possibleParent.getROI()).locate(centroid) != Location.EXTERIOR;
 	}
 	
 	boolean containsCentroid(PointOnGeometryLocator locator, PathObject possibleChild) {
 		Coordinate centroid = getCentroidCoordinate(possibleChild);
-		if (centroid == null)
-			return false;
 		return locator.locate(centroid) != Location.EXTERIOR;
 	}
 	
 	boolean containsCentroid(Geometry possibleParent, PathObject possibleChild) {
 		Coordinate centroid = getCentroidCoordinate(possibleChild);
-		if (centroid == null)
-			return false;
 		return SimplePointInAreaLocator.locate(centroid, possibleParent) != Location.EXTERIOR;
 	}
 	
@@ -295,19 +278,20 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 	}
 	
 	private Envelope getEnvelope(PathObject pathObject) {
-		var envelope = getEnvelope(pathObject.getROI());
-		lastEnvelopeMap.put(pathObject, envelope);
-		return envelope;
+		return getEnvelope(pathObject.getROI());
 	}
 	
 	private Envelope getEnvelope(ROI roi) {
-		var envelope = envelopeMap.get(roi);
-		if (envelope == null) {
-			envelope = new Envelope(roi.getBoundsX(), roi.getBoundsX() + roi.getBoundsWidth(),
-					roi.getBoundsY(), roi.getBoundsY() + roi.getBoundsHeight());
-			envelopeMap.put(roi, envelope);
-		}
-		return envelope;
+		boolean useCache = false;
+		if (useCache)
+			return envelopeMap.computeIfAbsent(roi, PathObjectTileCache::computeEnvelope);
+		else
+			return computeEnvelope(roi);
+	}
+
+	private static Envelope computeEnvelope(ROI roi) {
+		return new Envelope(roi.getBoundsX(), roi.getBoundsX() + roi.getBoundsWidth(),
+				roi.getBoundsY(), roi.getBoundsY() + roi.getBoundsHeight());
 	}
 	
 	private Envelope getEnvelope(ImageRegion region) {
@@ -332,22 +316,16 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		
 		// We can remove objects from a Quadtree
 		if (mapObjects instanceof Quadtree) {
-			Envelope envelope = lastEnvelopeMap.get(pathObject);
-			envelope = MAX_ENVELOPE;
-			if (envelope != null) {
-				if (mapObjects.remove(envelope, pathObject)) {
-					logger.debug("Removed {} from cache", pathObject);
-				} else
-					logger.debug("Unable to remove {} from cache", pathObject);
-			} else {
-				logger.debug("No envelope found for {}", pathObject);					
-			}
+			if (mapObjects.remove(MAX_ENVELOPE, pathObject)) {
+				logger.debug("Removed {} from cache", pathObject);
+			} else
+				logger.debug("Unable to remove {} from cache", pathObject);
 			// Remove the children
 			if (removeChildren) {
 				for (PathObject child : pathObject.getChildObjectsAsArray())
 					removeFromCache(child, removeChildren);
 			}
-		} else if (mapObjects instanceof SpatialIndex && !removeChildren) {
+		} else if (mapObjects != null && !removeChildren) {
 			// We can't remove objects from a STRtree, but since we're just removing one object we can rebuild only the cache for this class
 			constructCache(pathObject.getClass());
 		} else {
@@ -388,7 +366,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 			for (Entry<Class<? extends PathObject>, SpatialIndex> entry : map.entrySet()) {
 				if (cls == null || (includeSubclasses && cls.isAssignableFrom(entry.getKey())) || Objects.equals(cls, entry.getKey())) {
 					if (entry.getValue() != null) {
-						var list = entry.getValue().query(envelope);
+						List<PathObject> list = entry.getValue().query(envelope);
 						if (list.isEmpty())
 							continue;
 						
@@ -396,7 +374,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 							pathObjects = new HashSet<>();
 						
 						// Add all objects that have a parent, i.e. might be in the hierarchy
-						for (PathObject pathObject : (List<PathObject>)list) {
+						for (PathObject pathObject : list) {
 							var roi = pathObject.getROI();
 							if (roi == null || region == null || (roi.getZ() == z && roi.getT() == t)) {
 								if (pathObject.getParent() != null || pathObject.isRootObject()) {
@@ -442,11 +420,6 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 								return true;
 							}
 						}
-//						if (list.stream().anyMatch(p -> p.hasROI() && 
-//								(region == null || (p.getROI().getZ() == z && p.getROI().getT() == t))))
-//							return true;
-//						if (entry.getValue().hasObjectsForRegion(region))
-//							return true;
 					}
 				}
 			}
@@ -462,7 +435,7 @@ class PathObjectTileCache implements PathObjectHierarchyListener {
 		w.lock();
 		try {
 			boolean singleChange = event.getChangedObjects().size() == 1;
-			PathObject singleObject = singleChange ? event.getChangedObjects().get(0) : null;
+			PathObject singleObject = singleChange ? event.getChangedObjects().getFirst() : null;
 			if (singleChange && event.getEventType() == HierarchyEventType.ADDED) {
 				removeFromCache(singleObject, false);
 				addToCache(singleObject, false, singleObject.getClass());
